Fixing navbar_bg_img; Updated url; Copied pawprints to public folder

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,7 @@
   <body>
     <style>
       .nav-background {
-        background-image: url("<%= ENV['PAWPRINTS'] %>");
+        background-image: url("https://beta.leashapp.io/navbar_pawprints_wbg.png");
         background-size: cover;
     
         /* Workaround for some mobile browsers */
